[Carlos Veras] feat: finalizando uns coiso